# SparkleBeat-UI

./: .gitignore  README.md  requirements.txt  setup.py
PythonBindings/: CMakeLists.txt
PythonBindings/src/: Interactions.cpp  main.cpp
PythonBindings/src/include/: Interactions.h  library.h
PythonBindings/tests/: testfile.py
